Extended clustering Added baseline Song class cleanup Extended songs Added log format printing